# wira-borneo

./: .gitignore  README.md  TRACKER-SETUP.md  eslint.config.mjs  llm_warning_configuration.md  next.config.ts  nx.json  package-lock.json  package.json  ticketsguideline.md  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
apps/admin/: .env.local.example  package.json  tsconfig.json
apps/api/: .env.example  jest.config.cts  package.json  prisma.config.ts  tsconfig.app.json  tsconfig.seed.json
apps/api/prisma/: README.md  schema.prisma  seed.ts
apps/api/scripts/: ingest-building-profiles.ts  run-prisma-seed.mjs
apps/api/src/: app.module.ts  index.ts  main.ts
apps/hazard-routing-server/: .env.example  .gitignore  README.md  app.py  config.py  graph_loader.py  project.json  pyproject.toml  requirements.txt
apps/llm-server/: README.md  project.json  pyproject.toml
apps/llm-server/llm_server/: app.py  config.py
apps/mobile/: index.html  jest.config.cts  metro.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts
apps/tracker/: .env.local  .env.local.example  package.json  tailwind.config.js
components/Map/: MapView.tsx
components/UI/: LayerControls.tsx  SearchBar.tsx
components/Weather/: WeatherCard.tsx  WeatherIcon.tsx  WeatherPanel.tsx
docker-services/postgres/: docker-compose.yml
docs/: api-architecture.md  testing-volunteer-home-routing.md
hooks/: useWeatherLocation.ts
lib/: asean.ts
lib/weather/: actions.ts  types.ts
tickets/: client-volunteer-routing.md
(+267 files in other folders)
